# schemas/category.go
@@ -1,0 +1,10 @@
+package schemas
+
+import (
+	"gorm.io/gorm"
+)
+
+type Category struct {
+	gorm.Model
+	Title string `gorm:"embedded;not null"`
+}
